# InputParsercpp

./: CMakeLists.txt  README.md  a.out  customer.cpp  customer.h  inputOps.cpp  inputOps.h  main.cpp
src/: a.out  main.cpp
src/input/: inputOps.cpp  inputOps.h  parseLine.cpp  parseLine.h
src/models/: customer.cpp  customer.h  product.cpp  product.h
